Fix: remove padding, which was causing overlap between grid and information box

--- a/src/main/resources/cellsociety/stylesheets/dark.css
+++ b/src/main/resources/cellsociety/stylesheets/dark.css
@@ -2,7 +2,6 @@
   -fx-background: #2e2e2e;
   -fx-text-fill: white;
   -fx-font-size: 12px;
-  -fx-padding: 12px;
   -fx-font-family: "Arial";
 }
 
