--- a/src/main/resources/cellsociety/stylesheets/light.css
+++ b/src/main/resources/cellsociety/stylesheets/light.css
@@ -2,7 +2,6 @@
   -fx-background-color: white;
   -fx-text-fill: black;
   -fx-font-size: 12px;
-  -fx-padding: 12px;
   -fx-font-family: "Arial";
 }
 
